--- a/music/templates/base.html
+++ b/music/templates/base.html
@@ -104,7 +104,7 @@
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
                     <li class="active">
-                        <a href=""><i class="fa fa-fw fa-home"></i> Home </a>
+                        <a href=""><i class="fa fa-fw fa-home"></i> Profile </a>
                     </li>
                     <li>
                         <a href=""><i class="fa fa-fw fa-rss"></i> Feeds</a>
