--- a/music/static/css/sb-admin.css
+++ b/music/static/css/sb-admin.css
@@ -23,8 +23,32 @@ body {
 
 #page-wrapper {
     width: 100%;
-    padding: 0;
+    height: 100%;
+    position: relative;
+    display: table-row;
     background-color: #fff;
+}
+
+.main_page{
+    width: 100%;
+    height: 100%;
+    padding-left: 10%;
+    padding-right: 12%;
+    display: table;
+    position: absolute;
+    background-color: black;
+}
+
+.search_bar{
+    padding-left: 20%;
+}
+
+.search_bar_top{
+    padding-top: 0.30%;
+}
+
+.search_input{
+    width: 81%;
 }
 
 .huge {
@@ -34,12 +58,17 @@ body {
 
 @media(min-width:768px) {
     #wrapper {
-        padding-left: 225px;
+        padding-left: 0%;
+        padding-right:0%;
     }
 
     #page-wrapper {
-        padding: 10px;
+        top: 5%;
+        bottom: 2%;
+        padding: 0%;
+
     }
+
 }
 
 /* Top Navigation */
@@ -117,7 +146,7 @@ ul.alert-dropdown {
         position: fixed;
         top: 51px;
         left: 225px;
-        width: 225px;
+        width: 10%;
         margin-left: -225px;
         border: none;
         border-radius: 0;
