--- a/music/static/css/sb-admin.css
+++ b/music/static/css/sb-admin.css
@@ -39,6 +39,24 @@ body {
     background-color: black;
 }
 
+*[role="form"] {
+    max-width: 530px;
+    padding: 15px;
+    margin: 0 auto;
+    background-color: #fff;
+    border-radius: 0.3em;
+}
+
+*[role="form"] h2 {
+    margin-left: 5em;
+    margin-bottom: 1em;
+}
+
+.reg_form_padding{
+
+    padding-right: 15px;
+}
+
 .search_bar{
     padding-left: 20%;
 }
